test/libsolidity/syntaxTests/specialFunctions/abidecode/abi_decode_invalid_argument_tuple_type.sol
contract C {
    function f() pure public {
        abi.decode("", ((uint, int)));
    }
}
// ----
// TypeError 1039: (68-79): Argument has to be a type name.
